packages/kyvernoPolicies/chart/tests/vpol/disallow-auto-mount-service-account-token-cel/chainsaw-test/pod-bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod-automount-true
spec:
  automountServiceAccountToken: true
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
