packages/kyvernoPolicies/chart/tests/vpol/disallow-auto-mount-service-account-token-cel/chainsaw-test/serviceaccount-bad.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: badsa-automount-undefined
