packages/kyvernoPolicies/chart/tests/vpol/disallow-auto-mount-service-account-token-cel/chainsaw-test/serviceaccount-good.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: goodsa-automount-false
automountServiceAccountToken: false
